halaman edit works

--- a/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
@@ -268,36 +268,16 @@
                   </div>
                 </div>
               </div>
-
-              
-
-
-
-
-
-
             </div>
           </div>
-
-
-
         </div>
-
-
-
-
-
-
-
-
-
-
-
-        
       </form>
       <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
         <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
           Simpan
+        </button>
+        <button mat-raised-button type="button" class="cancel-button" fxFlex="20" (click)="batal()">
+          Batal
         </button>
       </div>
     </div>
