--- a/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.scss
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.scss
@@ -17,9 +17,40 @@
 .body-layout:focus-within {
   background-color: #fff;
 }
-
 .field-label {
   font-size: 14px;
   transform: scale(0.75);
   transform-origin: 0 0;
+}
+
+:host ::ng-deep .mat-form-field.readonly{
+  div{
+    div{
+      background-color: #ddd;
+    }
+  }
+}
+
+.deleteFile {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+}
+
+button.cancel-button {
+  border: 1px solid #dc1e2d;
+  color: #000;
+  font-weight: 300;
+}
+
+button.submit-button {
+  background-color: #00a01d;
+  color: #fff;
+  font-weight: 300;
+}
+
+button.warning-button {
+  border: 1px solid #eba800;
+  color: #fff;
+  font-weight: 300;
 }
