--- a/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.html
@@ -156,7 +156,7 @@
 
               <div class="px-24" style="margin-top:15px;" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="90%" class="is-light form-primary readonly">
-                  <input matInput type="text" [value]="proposalData.program_code" readonly
+                  <input matInput type="text" [value]="trs_program_code" readonly
                     placeholder="Program Code">
                 </mat-form-field>
               </div>
