--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
@@ -13,6 +13,23 @@
   </mat-toolbar>
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
+
+    <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+      <mat-form-field fxFlex="30%" class="dropdown is-light form-primary">
+        <mat-select placeholder="Kabupaten" formControlName="kabupaten" (selectionChange)="changeKab($event)">
+          <mat-option *ngFor="let sp of kabupatenList" [value]="sp">{{sp}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div fxFlex="30%" class=""></div>
+      <div class="search-field" fxFlex="40%" class="dropdown is-light form-primary">
+        <mat-icon>search</mat-icon>
+        <mat-form-field class="is-light tab-search">
+          <input matInput [placeholder]="ls.locale.global.label.search" (keyup)="updateFilter($event)"
+            autocomplete="off">
+        </mat-form-field>
+      </div>
+    </div>
+
     <form autocomplete="off" [formGroup]="formExecutor" class="responsive">
       <input formControlName="test">
 
