--- a/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.html
@@ -162,24 +162,24 @@
               </div>
               <div class="mt-8 px-24" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="90%" class="is-light form-primary readonly static">
-                  <input matInput type="text" [value]="proposalData.created_by" readonly
+                  <input matInput type="text" [value]="proposalData?.created_by" readonly
                     placeholder="Created By">
                 </mat-form-field>
               </div>
               <div class="px-24" style="margin-top:0 !important;" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="90%" class="is-light form-primary readonly hung">
-                  <input matInput type="text" [value]="proposalData.created_at" readonly>
+                  <input matInput type="text" [value]="proposalData?.created_at" readonly>
                 </mat-form-field>
               </div>
               <div class="mt-8 px-24" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="90%" class="is-light form-primary readonly static">
-                  <input matInput type="text" [value]="proposalData.updated_by" readonly
+                  <input matInput type="text" [value]="proposalData?.updated_by" readonly
                     placeholder="Modified By">
                 </mat-form-field>
               </div>
               <div class="px-24" style="margin-top:0 !important;" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="90%" class="is-light form-primary readonly hung">
-                  <input matInput type="text" [value]="proposalData.updated_at" readonly>
+                  <input matInput type="text" [value]="proposalData?.updated_at" readonly>
                 </mat-form-field>
               </div>
 
