--- a/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
@@ -272,12 +272,12 @@
           </div>
         </div>
       </form>
-      <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+      <div class="confirm pt-24 pb-24" style="padding-left: 22px;" fxLayout="row" fxLayoutGap="20px">
         <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
           Simpan
         </button>
         <button mat-raised-button type="button" class="cancel-button" fxFlex="20" (click)="batal()">
-          Batal
+          Kembali ke TRS List
         </button>
       </div>
     </div>
