--- a/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.scss
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/edit/trs-proposal-edit.component.scss
@@ -74,7 +74,7 @@ button.submit-button {
 }
 
 button.warning-button {
-  border: 1px solid #eba800;
+  background-color: #eba800;
   color: #fff;
   font-weight: 300;
 }
